# shish

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AUTHORS  BUGS  CLAUDE.md  CMakeLists.txt  ChangeLog  Makefile.in  README  TODO  TODO.md  accfg.sh  aclocal.m4  autogen.sh  build.mk.in  build.sh  cfg-autotools.sh  cfg-cmake.sh  cfg.sh  confdefs.h  config.h  config.h.cmake  config.h.in  config.mk.in  configure  configure.ac  configure.in  gen-mk.cmd  gen-mk.sh  mkentropy.c  premake.lua  premake4.lua  premake5.lua  print-signames.c  shish.pro  shish.sublime-project  shish.sublime-workspace
cmake/: Builtins.cmake  Checks.cmake  Debug.cmake  Functions.cmake  Pedantic.cmake  libowfat.cmake
doc/: Makefile.in  arith.ebnf  expr.y  scc.ebnf
doc/ansi/: ANSI-C-grammar-y.txt  c99.y
doc/man/: Makefile.in  shish.pod
doc/posix/: Makefile.in  ieee-p1003.2-d11.2-s3.txt  ieee-p1003.2-d11.2-s4.5.txt  n1570.txt  shell.y
fixes/: 01-bracegroup-route-eval-command.patch  02-heredoc-tab-strip.patch  03-suppress-noninteractive-job-noise.patch  04-redir-parse-rw-and-out-switch.patch  05-printf-builtin.patch  06-unalias-typo.patch  07-fdtable-ok-typo.patch  08-redir-addhere-no-static.patch  09-fdtable-dup-cloexec.patch  10-enable-test-printf-builtins.patch  11-sh-env-cwd-ownership.patch  12-eval-function-cascade-free.patch  13-pipeline-exit-status.patch  14-exec-hash-invalidate-on-redef.patch  15-lineno-tracking.patch  16-exit-propagation.patch  17-function-exit-status.patch  18-empty-field-splitting.patch  19-subshell-pipeline-fork-exit.patch  20-path-directory-shadowing.patch  21-exec-failure-status-messages.patch  22-command-not-found-redirection.patch  23-read-delimiter-trim.patch  24-single-char-arith-var.patch  25-bgnd-compound-fork-consistency.patch  26-wait-nohang-windows.patch  27-waitpid-nointr-windows.patch  28-wait-pid-nohang-windows-blocks.patch  29-export-unset-segfault.patch  30-readonly-assign-fdpop-null.patch  31-cmdsubst-pipeline-empty.patch  32-job-fork-nproc-oob.patch  33-job-delete-current-promotion.patch  34-wait-exitstatus-lost.patch  35-job-done-banner-not-backgrounded.patch  36-sigchld-redraw-only-while-reading.patch  37-echo-dash-operand.patch  38-configure-builtins-m4-foreach.patch  39-set-no-args-dump.patch  40-chmod-symbolic-mode.patch  (+45 more)
lib/: Makefile.in  alloc.h  arena.h  buffer.h  byte.h  case.h  fmt.h  glob.c  glob.h  ioctlcmd.h  mmap.h  msvc-compat.h  open.h  path.h  path_internal.h  safemult.h  scan.h  shell.h  sig-internal.h  sig.h  sig_internal.h  str.h  stralloc.h  typedefs.h  uint16.h  uint32.h  uint64.h  uint8.h  unix.h  utf8.h  wait.h  windoze.h
lib/alloc/: Makefile.in  alloc.c  alloc_re.c  alloc_redebug.c  alloc_zero.c  alloc_zerodebug.c  allocdebug.c  debug_error.c  str_dup.c  str_dupdebug.c
lib/buffer/: Makefile.in  buffer_1.c  buffer_2.c  buffer_close.c  buffer_default.c  buffer_dummyread.c  buffer_dummyreadmmap.c  buffer_dump.c  buffer_feed.c  buffer_flush.c  buffer_free.c  buffer_frombuf.c  buffer_fromsa.c  buffer_fromstr.c  buffer_get.c  buffer_get_new_token_sa.c  buffer_get_new_token_sa_pred.c  buffer_get_token.c  buffer_get_token_sa.c  buffer_get_token_sa_pred.c  buffer_get_until.c  buffer_getc.c  buffer_getline.c  buffer_init.c  buffer_init_free.c  buffer_mmapprivate.c  buffer_mmapread.c  buffer_mmapread_fd.c  buffer_munmap.c  buffer_prefetch.c  buffer_put.c  buffer_put8long.c  buffer_putc.c  buffer_putflush.c  buffer_putfmt.c  buffer_putlong.c  buffer_putlong0.c  buffer_putlonglong.c  buffer_putm_internal.c  buffer_putnc.c  (+22 more)
lib/byte/: Makefile.in  byte_ccopy.c  byte_chr.c  byte_copy.c  byte_copyr.c  byte_count.c  byte_diff.c  byte_equal.c  byte_fill.c  byte_rchr.c  byte_replace.c  byte_triml.c  byte_trimr.c  byte_zero.c
lib/fmt/: Makefile.in  fmt_8long.c  fmt_8longlong.c  fmt_escapecharc.c  fmt_escapecharshell.c  fmt_long.c  fmt_longlong.c  fmt_minus.c  fmt_tohex.c  fmt_ulong.c  fmt_ulong0.c  fmt_ulonglong.c  fmt_xlong.c  fmt_xlonglong.c
lib/mmap/: Makefile.in  mmap_private.c  mmap_read.c  mmap_read_fd.c  mmap_unmap.c
lib/open/: Makefile.in  open_append.c  open_excl.c  open_read.c  open_temp.c  open_trunc.c
lib/path/: Makefile.in  path_basename.c  path_canonical.c  path_canonical_sa.c  path_canonicalize.c  path_collapse.c  path_fnmatch.c  path_getcwd.c  path_gethome.c  path_getsep.c  path_is_absolute.c  path_is_absolute_b.c  path_len_s.c  path_readlink.c  path_realpath.c  path_right.c
lib/scan/: Makefile.in  scan_8int.c  scan_8long.c  scan_8longlong.c  scan_8longlongn.c  scan_8longn.c  scan_8short.c  scan_asn1derlength.c  scan_asn1dertag.c  scan_charsetnskip.c  scan_double.c  scan_eolskip.c  scan_fromhex.c  scan_httpdate.c  scan_int.c  scan_line.c  scan_lineskip.c  scan_long.c  scan_longlong.c  scan_longn.c  scan_netstring.c  scan_noncharsetnskip.c  scan_nonwhitenskip.c  scan_octal.c  scan_pb_tag.c  scan_pb_type0_sint.c  scan_pb_type1_fixed64.c  scan_pb_type5_fixed32.c  scan_plusminus.c  scan_short.c  scan_uint.c  scan_ulong.c  scan_ulonglong.c  scan_ulongn.c  scan_ushort.c  scan_utf8.c  scan_utf8_sem.c  scan_varint.c  scan_whitenskip.c  scan_xchar.c  (+6 more)
lib/shell/: Makefile.in  shell_alloc.c  shell_allocdebug.c  shell_basename.c  shell_dirname.c  (+15 more)
libterminput/: libterminput.h
m4/: ax_check_define.m4  color.m4  debug.m4  dep.m4  diet.m4  funcs.m4  hack.m4  headers.m4  info.m4  libowfat.m4  maintainer.m4  osdep.m4  summary.m4  tools.m4  types.m4  werror.m4
scripts/: Makefile.in  find-cmake.sh  fnproto.sh  gen-builtin-config-h.sh  get-prototypes.sh
src/: Makefile.in  builtin.h  builtin_config.h  builtin_config.h.cmake  debug.h  eval.h  exec.h  expand.h  expr.h  fd.h  fdstack.h  fdtable.h  features.h  fork.c  history.h  job.h  parse.h  prompt.h  redir.h  sh.h  sig.h  source.h  term.h  tree.h  var.h  vartab.h
tests/: Makefile  bquote.sh  builtin-expr.sh  builtin-hash.sh  builtin-kill.sh  builtin-local.sh  builtin-read.sh  builtin-test.sh  builtin-trap.sh  checkfg.c  cmd-subst.sh  common.sh  debug.sh  fixed.sh  functions.sh  here-doc.sh  if.sh  local.sh  loop-while.sh  param.sh  ptwrap.c  resetsig.c  run-tst.sh  while.sh
(+558 files in other folders)
